@@ -464,30 +464,6 @@ name|SUBWORD_DELIM
 return|;
 block|}
 block|}
-DECL|method|charType
-specifier|private
-name|int
-name|charType
-parameter_list|(
-name|String
-name|s
-parameter_list|,
-name|int
-name|pos
-parameter_list|)
-block|{
-return|return
-name|charType
-argument_list|(
-name|s
-operator|.
-name|charAt
-argument_list|(
-name|pos
-argument_list|)
-argument_list|)
-return|;
-block|}
 comment|// use the type of the first char as the type
 comment|// of the token.
 DECL|method|tokType
@@ -663,6 +639,9 @@ comment|// no subwords (just a simple word)
 comment|//
 comment|// Would it actually be faster to check for the common form
 comment|// of isLetter() isLower()*, and then backtrack if it doesn't match?
+name|int
+name|origPosIncrement
+decl_stmt|;
 while|while
 condition|(
 literal|true
@@ -694,14 +673,6 @@ name|termText
 argument_list|()
 decl_stmt|;
 name|int
-name|off
-init|=
-name|t
-operator|.
-name|startOffset
-argument_list|()
-decl_stmt|;
-name|int
 name|start
 init|=
 literal|0
@@ -721,6 +692,13 @@ operator|==
 literal|0
 condition|)
 continue|continue;
+name|origPosIncrement
+operator|=
+name|t
+operator|.
+name|getPositionIncrement
+argument_list|()
+expr_stmt|;
 comment|// Avoid calling charType more than once for each char (basically
 comment|// avoid any backtracking).
 comment|// makes code slightly more difficult, but faster.
@@ -1083,6 +1061,13 @@ operator|==
 literal|0
 condition|)
 block|{
+name|newtok
+operator|.
+name|setPositionIncrement
+argument_list|(
+name|origPosIncrement
+argument_list|)
+expr_stmt|;
 return|return
 name|newtok
 return|;
@@ -1544,13 +1529,25 @@ name|queuePos
 operator|=
 literal|1
 expr_stmt|;
-return|return
+name|Token
+name|tok
+init|=
 name|queue
 operator|.
 name|get
 argument_list|(
 literal|0
 argument_list|)
+decl_stmt|;
+name|tok
+operator|.
+name|setPositionIncrement
+argument_list|(
+name|origPosIncrement
+argument_list|)
+expr_stmt|;
+return|return
+name|tok
 return|;
 block|}
 comment|// index "a","b","c" as  pos0="a", pos1="b", pos2="c", pos2="abc"
@@ -1750,115 +1747,6 @@ name|concatTok
 argument_list|)
 expr_stmt|;
 block|}
-block|}
-DECL|method|str
-specifier|private
-name|String
-name|str
-parameter_list|(
-name|List
-argument_list|<
-name|Token
-argument_list|>
-name|lst
-parameter_list|)
-block|{
-name|StringBuilder
-name|sb
-init|=
-operator|new
-name|StringBuilder
-argument_list|()
-decl_stmt|;
-name|sb
-operator|.
-name|append
-argument_list|(
-literal|'{'
-argument_list|)
-expr_stmt|;
-for|for
-control|(
-name|Token
-name|t
-range|:
-name|lst
-control|)
-block|{
-name|sb
-operator|.
-name|append
-argument_list|(
-literal|'('
-argument_list|)
-expr_stmt|;
-name|sb
-operator|.
-name|append
-argument_list|(
-literal|'"'
-argument_list|)
-expr_stmt|;
-name|sb
-operator|.
-name|append
-argument_list|(
-name|t
-operator|.
-name|termText
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|sb
-operator|.
-name|append
-argument_list|(
-literal|"\",increment="
-argument_list|)
-expr_stmt|;
-name|sb
-operator|.
-name|append
-argument_list|(
-name|Integer
-operator|.
-name|toString
-argument_list|(
-name|t
-operator|.
-name|getPositionIncrement
-argument_list|()
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|sb
-operator|.
-name|append
-argument_list|(
-literal|')'
-argument_list|)
-expr_stmt|;
-name|sb
-operator|.
-name|append
-argument_list|(
-literal|','
-argument_list|)
-expr_stmt|;
-block|}
-name|sb
-operator|.
-name|append
-argument_list|(
-literal|'}'
-argument_list|)
-expr_stmt|;
-return|return
-name|sb
-operator|.
-name|toString
-argument_list|()
-return|;
 block|}
 comment|// questions:
 comment|// negative numbers?  -42 indexed as just 42?
